A workaround is done for Sine, but the underlying problem isn't understood yet